--- a/index.html
+++ b/index.html
@@ -3,23 +3,19 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>chodzacy div</title>
+        <title>The noobINprog Site</title>
         <link rel="stylesheet" href="style/style.css">
     </head>
 
     <body>
         <div class="container">
-          qwe
-          qwe
-          
-           <!--<div class="zminaDlaGit"> zminilem o 1141</div>
-                      <div class="zminaDlaGit"> zminilem o 1141</div>
-
-            <div class="header"></div>
-            <div class="gamediv"></div>
-            <div class="leftSideBar"></div>
-            <div class="rightSideBar"></div>
-            <div class="footer"></div>-->
+            <div class="header"><h3>independent code...</h3></div>
+            <div class="mainContent">
+                <div class="leftSide"></div>
+                <div class="main"></div>
+                <div class="rightSide"></div>
+            </div>
+            <footer class="footer"><p>hmmm ...</p></footer>
         </div>
         <script src="script/js.js"></script>
     </body>
