photo center backgroung
as jumbotron

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
 
 <div class="container-fluid">
-  <h1>Medium Grid</h1>
+  <div class="header">
+      <h1 class="bg">Medium Grid</h1>
+  </div>
   <p>The following example will result in a 25%/75% split on small devices and a 50%/50% split on medium (and large) devices. On extra small devices, it will automatically stack (100%).</p>
   <p>Resize the browser window to see the effect.</p>
   <div class="row">
